<resources>
    <string name="app_name">Worklog</string>
    <string name="all_add_project">Add Project</string>
    <string name="all_project_name_label">Name</string>
    <string name="all_project_description_label">Project description</string>
    <string name="all_cancel_action">Cancel</string>
    <string name="add_project_dialog_submit">Setup Project</string>
    <string name="all_chevron_right_content_description">Decorative chevron arrow</string>
    <string name="all_task_label">Task</string>
    <string name="all_start_date_label">Start Date</string>
    <string name="all_end_date_label">End Date</string>
    <string name="all_notes_label">Notes</string>
    <string name="add_work_entry_notes_hint">Write notes describing the result of the time spent on task</string>
    <string name="add_work_entry_activity_title">Log Work Entry</string>
    <string name="add_work_entry_menuitem_create">Create</string>
    <string name="all_update_button_label">Change</string>
    <string name="add_work_entry_endtime_label">End Time</string>
    <string name="add_work_entry_starttime_label">Start Time</string>
    <string name="project_timer_title">Timer</string>
    <string name="project_timer_task_hint">What are you working on?</string>
</resources>
