<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <EditText
        android:id="@+id/edittext_add_project_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/all_project_name_label"
        android:lines="1"/>
    <EditText
        android:id="@+id/edittext_add_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/all_project_description_label"
        android:minLines="1"
        android:lines="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/button_add_project_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_cancel_action"/>
        <Button
            android:id="@+id/button_add_project_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_project_dialog_submit" />
    </LinearLayout>
</LinearLayout>